# sound-multiplexer

./: .gitignore  Cargo.toml  Makefile  README.md  main.py  requirements.txt  setup.py  test_gui.py  test_installation.py
.github/releases/: v1.0.0.md
.github/workflows/: ci.yml  pages.yml  release.yml
app/: Cargo.toml
app/audio/src/: fanout.rs  lib.rs  linux.rs
app/audio/src/windows/: engine.rs
app/audio/tests/: linux_live.rs
app/src-tauri/src/: lib.rs
app/ui/: main.js  styles.css
app/ui-tests/: interactions.test.js  package-lock.json  render.test.js  tauri-ipc.test.js  theme.test.js
audio/: Cargo.toml
audio/src/: fanout.rs  lib.rs  linux.rs
audio/src/windows/: engine.rs  mod.rs
audio/tests/: windows_live.rs
docs/: ARCHITECTURE.md  TECHNICAL.md  USER_GUIDE.md
packaging/: install.sh  sound-multiplexer.desktop  sound-multiplexer.spec
sound_multiplexer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: audio_manager.py  main.py  theme_manager.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/gui/: main_window.py  settings_dialog.py
ui/: index.html  main.js  styles.css
ui-tests/: README.md  interactions.test.js  master-row.test.js  package.json  reconciliation.test.js  theme.test.js
ui-tests/helpers/: harness.js
website/: index.html  site.js  styles.css
