[workspace]
resolver = "2"
members = ["audio", "src-tauri"]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/rayjine/sound-multiplexer"

[workspace.dependencies]
anyhow = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
