[package]
name = "sound-multiplexer-audio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true

# --- Windows backend dependencies (owned by the Windows backend module) ---
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_UI_Shell_PropertiesSystem", "Win32_Devices_FunctionDiscovery", "Win32_Foundation", "Win32_System_Threading", "Win32_System_Variant", "Win32_Security"] }
windows-core = "0.62"
