[package]
name = "sound-multiplexer"
description = "Play audio through several output devices at once"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "sound_multiplexer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
sound-multiplexer-audio = { path = "../audio" }
anyhow.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
env_logger = "0.11"
